updated wallet and the wallet history

--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -31,6 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link active" id="account-address-tab" href="#account-address" aria-controls="account-address" aria-selected="true">Addresses</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="account-address-tab" href="/wallet/history" aria-controls="account-address" aria-selected="false">Wallet</a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" id="account-details-tab" href="/changepassword" aria-controls="account-details" aria-selected="false">Change Password</a>
                         </li>
