--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -7,8 +7,8 @@
 }
 
 .cart-page-total .btn:hover {
-    background-color: #cda557 !important; /* Hover color */
-    border-color: #cda557 !important;
+    background-color: #1d2951 !important; /* Hover color */
+    border-color: #1d2951 !important;
 }
 
 </style>
