--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -24,8 +24,8 @@
   
     .new-address-btn {
       background: white;
-      color: #cda557;
-      border: 1px solid #cda557;
+      color: #1d2951;
+      border: 1px solid #1d2951;
       padding: 0.5rem 1rem;
       border-radius: 4px;
       cursor: pointer;
@@ -33,7 +33,7 @@
     }
   
     .new-address-btn:hover {
-      background-color: #cda557;
+      background-color: #1d2951;
       color: white;
     }
   
@@ -83,7 +83,7 @@
     }
   
     .proceed-btn:hover {
-      background-color: #cda557;
+      background-color: #1d2951;
     }
   
     .savings {
