--- a/views/user/createaddress.ejs
+++ b/views/user/createaddress.ejs
@@ -40,7 +40,7 @@
   .form-group input:focus,
   .form-group select:focus,
   .form-group textarea:focus {
-    border-color: #cda557;
+    border-color: #1d2951;
     outline: none;
   }
 
@@ -74,7 +74,7 @@
   }
 
   .submit-btn {
-    background: #cda557;
+    background: #1d2951;
     color: white;
     border: none;
     padding: 1rem;
