--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -54,6 +54,11 @@
                 >Addresses</a
               >
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" id="account-address-tab" href="/wallet/history" aria-controls="account-address" aria-selected="false">Wallet</a>
+          </li>
+
             <li class="nav-item">
               <a
                 class="nav-link"
