--- a/views/user/placingorder.ejs
+++ b/views/user/placingorder.ejs
@@ -24,7 +24,7 @@
         margin-bottom: 20px;
         margin-top: 20px;
         text-decoration: none;
-        color: #cda557;
+        color: #1d2951;
         font-size: 14px;
     }
     
@@ -87,7 +87,7 @@
     }
     
     .payment-option.active {
-        border-left: 3px solid #cda557;
+        border-left: 3px solid #1d2951;
         background-color: #fff;
     }
     
@@ -128,13 +128,13 @@
         width: 16px;
         height: 16px;
         border-radius: 50%;
-        border: 2px solid #cda557;
-        background-color: #cda557;
+        border: 2px solid #1d2951;
+        background-color: #1d2951;
     }
     
     .place-order-btn {
         margin-top: auto;
-        background-color: #cda557;
+        background-color: #1d2951;
         color: white;
         padding: 12px;
         border: none;
@@ -145,7 +145,7 @@
     }
     
     .place-order-btn:hover {
-        background-color: #cda557;
+        background-color: #1d2951;
     }
     
     .secure-delivery {
@@ -154,9 +154,9 @@
         justify-content: center;
         margin-top: 20px;
         padding: 10px;
-        border: 1px dashed #cda557;
+        border: 1px dashed #1d2951;
         border-radius: 4px;
-        color: #cda557;
+        color: #1d2951;
     }
     
     .secure-icon {
