--- a/views/user/changepassword.ejs
+++ b/views/user/changepassword.ejs
@@ -6,7 +6,7 @@
                     <h2>Other</h2>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li class="active">My Account</li>
+                        <li class="active">Change Password</li>
                     </ul>
                 </div>
             </div>
@@ -21,7 +21,7 @@
                         <div class="col-lg-3">
                             <ul class="nav myaccount-tab-trigger" id="account-page-tab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="account-dashboard-tab" href="/profile" aria-controls="account-dashboard" aria-selected="true">Dashboard</a>
+                                    <a class="nav-link " id="account-dashboard-tab" href="/profile" aria-controls="account-dashboard" aria-selected="false">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="account-orders-tab" href="/orders" aria-controls="account-orders" aria-selected="false">Orders</a>
@@ -29,8 +29,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link" id="account-address-tab" href="/address" aria-controls="account-address" aria-selected="false">Addresses</a>
                                 </li>
+
                                 <li class="nav-item">
-                                    <a class="nav-link" id="account-details-tab" href="#change-password" aria-controls="account-details" aria-selected="false">Change Password</a>
+                                    <a class="nav-link" id="account-address-tab" href="/wallet/history" aria-controls="account-address" aria-selected="false">Wallet</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="account-details-tab" href="#change-password" aria-controls="account-details" aria-selected="true">Change Password</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="account-logout-tab" href="/logout" role="tab" aria-selected="false">Logout</a>
@@ -96,7 +101,7 @@ document.getElementById('changePasswordForm').addEventListener('submit', functio
                 icon: 'success',
                 title: 'Success!',
                 text: data.message,
-                confirmButtonColor: '#cda557'
+                confirmButtonColor: '#1d2951'
             }).then((result) => {
                 if (result.isConfirmed) {
                     window.location.href = '/profile';
@@ -136,7 +141,7 @@ document.getElementById('changePasswordForm').addEventListener('submit', functio
     }
 
     .edit-btn:hover {
-        background-color: #cda557;
+        background-color: #1d2951;
     }
 </style>
 
